0.3.0
 - feat: implement saving and loading of structure composites (#1)
 - fix: visualization issue with empty data (#47)
 - fix: editing layers not possible (regression from migration to PyQt6)
0.2.4
 - fix: properly handle FileNotFounderror (#44)
 - fix: properly handle bmlab exceptions (#42)
 - enh: reduce complexity of error message if an associated file
   is missing
 - fix: close bmlab session after loading data (#48)
 - build: add github action to create installer packages (#31)
 - build: add Github deploy action
 - build: pin shapely to fix macOS DMG packages
0.2.3
 - fix: properly handle nan-valued data in colocalize (#36)
 - fix: properly handle nan-valued data in collect (#36)
 - setup: bump bmlab to 0.1.8 (#37)
0.2.2
 - fix: properly handle nan-valued data (#25)
 - fix: correctly open bmlab files with multiple repetitions (#26)
0.2.1
 - enh: keep the order of data keys returned by bmlab for user convenience (#24)
 - setup: migrate from PyQt5 (5.15.0) to PyQt6 (6.2.0) (#23)
 - setup: bump bmlab from 0.1.1 to 0.1.2 (#24)
 - setup: bump pyqtgraph from 0.12.3 to 0.12.4 (#23)
0.2.0
 - feat: support bmlab session file format (#18)
 - enh: prevent users from loading the same file twice
0.1.2
 - fix: color of shapes in colocalize view not updated when changed
   in collect view
 - setup: bump pyqtgraph from 0.12.1 to 0.12.3
 - setup: bump required Python version to 3.7, because pyqtgraph
   has that dependency
0.1.1
 - initial public release